@@ -260,6 +260,51 @@ package TestCase {
     return 0;
   }
   
+  sub convert_to_string : int () {
+    my $byte_string = (String)(byte)23;
+    my $short_string = (String)(short)23;
+    my $int_string = (String)23;
+    my $long_string = (String)23L;
+    my $float_string = (String)0.25f;
+    my $double_string = (String)0.25;
+    
+    my $float_inf = (String)(1.0f / 0.0f);
+    my $float_minus_inf = (String)(-1.0f / 0.0f);
+    my $float_nan = (String)(0.0f / 0.0f);
+
+    my $double_inf = (String)(1.0 / 0.0);
+    my $double_minus_inf = (String)(-1.0 / 0.0);
+    my $double_nan = (String)(0.0 / 0.0);
+    
+    if ($byte_string eq "23") {
+      if ($short_string eq "23") {
+        if ($int_string eq "23") {
+          if ($long_string eq "23") {
+            if ($float_string eq "0.250000") {
+              if ($float_inf eq "inf") {
+                if ($float_minus_inf eq "-inf") {
+                  if ($float_nan eq "nan") {
+                    if ($double_string eq "0.250000") {
+                      if ($double_inf eq "inf") {
+                        if ($double_minus_inf eq "-inf") {
+                          if ($double_nan eq "nan") {
+                            return 1;
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    
+    return 0;
+  }
+  
   sub isa_basic : int () {
     my $minimal = new TestCase::Minimal;
     if ($minimal isa TestCase::Minimal) {
