@@ -153,17 +153,153 @@ package TestCase {
     my $string_same = "abc";
     my $string_short = "ab";
     my $string_long = "abcd";
-    my $string_different= "adc";
+    my $string_different_short= "ad";
+    my $string_different_long= "adcd";
     my $string_empty = "";
     
     # eq
     my $eq_ok = 0;
     if ($string eq $string_same) {
-      $eq_ok = 1;
+      if (!($string eq $string_short)) {
+        if (!($string eq $string_long)) {
+          if (!($string eq $string_different_short)) {
+            if (!($string eq $string_different_long)) {
+              if (!($string eq $string_empty)) {
+                $eq_ok = 1;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    # ne
+    my $ne_ok = 0;
+    if (!($string ne $string_same)) {
+      if (($string ne $string_short)) {
+        if (($string ne $string_long)) {
+          if (($string ne $string_different_short)) {
+            if (($string ne $string_different_long)) {
+              if (($string ne $string_empty)) {
+                $ne_ok = 1;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    # gt
+    my $gt_ok = 0;
+    if (!($string gt $string_same)) {
+      if ($string gt $string_short) {
+        if (!($string gt $string_long)) {
+          if (!($string gt $string_different_short)) {
+            if (!($string gt $string_different_long)) {
+              if ($string gt $string_empty) {
+                $gt_ok = 1;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    # ge
+    my $ge_ok = 0;
+    if ($string ge $string_same) {
+      if ($string ge $string_short) {
+        if (!($string ge $string_long)) {
+          if (!($string ge $string_different_short)) {
+            if (!($string ge $string_different_long)) {
+              if ($string ge $string_empty) {
+                $ge_ok = 1;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    # lt
+    my $lt_ok = 0;
+    if ($string lt $string_same) {
+      if (!($string lt $string_short)) {
+        if ($string lt $string_long) {
+          if ($string lt $string_different_short) {
+            if ($string lt $string_different_long) {
+              if (!($string lt $string_empty)) {
+                $lt_ok = 1;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    # le
+    my $le_ok = 0;
+    if ($string le $string_same) {
+      if (!($string le $string_short)) {
+        if ($string le $string_long) {
+          if ($string le $string_different_short) {
+            if ($string le $string_different_long) {
+              if (!($string le $string_empty)) {
+                $le_ok = 1;
+              }
+            }
+          }
+        }
+      }
     }
     
-    if ($eq_ok) {
+    if ($eq_ok && $ne_ok && $gt_ok && $ge_ok && $lt_ok && $le_ok) {
       return 1;
+    }
+    
+    return 0;
+  }
+  
+  jit sub convert_to_string : int () {
+    my $byte_string = (String)(byte)23;
+    my $short_string = (String)(short)23;
+    my $int_string = (String)23;
+    my $long_string = (String)23L;
+    my $float_string = (String)0.25f;
+    my $double_string = (String)0.25;
+    
+    my $float_inf = (String)(1.0f / 0.0f);
+    my $float_minus_inf = (String)(-1.0f / 0.0f);
+    my $float_nan = (String)(0.0f / 0.0f);
+
+    my $double_inf = (String)(1.0 / 0.0);
+    my $double_minus_inf = (String)(-1.0 / 0.0);
+    my $double_nan = (String)(0.0 / 0.0);
+    
+    if ($byte_string eq "23") {
+      if ($short_string eq "23") {
+        if ($int_string eq "23") {
+          if ($long_string eq "23") {
+            if ($float_string eq "0.250000") {
+              if ($float_inf eq "inf") {
+                if ($float_minus_inf eq "-inf") {
+                  if ($float_nan eq "nan") {
+                    if ($double_string eq "0.250000") {
+                      if ($double_inf eq "inf") {
+                        if ($double_minus_inf eq "-inf") {
+                          if ($double_nan eq "nan") {
+                            return 1;
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
     
     return 0;
